[gd_scene load_steps=11 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://background/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://separator.tscn" type="PackedScene" id=3]
[ext_resource path="res://red_car/red_car.tscn" type="PackedScene" id=4]
[ext_resource path="res://alien/alien_ship.tscn" type="PackedScene" id=5]
[ext_resource path="res://common/dynamic_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://arrow/arrow.tscn" type="PackedScene" id=7]
[ext_resource path="res://background/defense_line.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFontData" id=1]

font_path = "res://common/fonts/Kenney High Square.ttf"

[sub_resource type="DynamicFont" id=2]

size = 72
font_data = SubResource( 1 )

[node name="main_scn_root" type="Node"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 547.765 ],
"_edit_vertical_guides_": [ 483.373 ]
}
incr_speed = 0.9

[node name="game_timer" type="Timer" parent="."]

[node name="poly_sky" parent="." instance=ExtResource( 2 )]

[node name="main_brick" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.507813, 0.495911, 0.495911, 1 )
self_modulate = Color( 0.707031, 0.320374, 0.320374, 1 )

[node name="red_car" parent="." groups=[
"main_scene_group",
] instance=ExtResource( 4 )]
position = Vector2( 141, 420 )

[node name="alien_ship" parent="." groups=[
"main_scene_group",
] instance=ExtResource( 5 )]
position = Vector2( 151.851, 800 )

[node name="floor_brick" parent="." instance=ExtResource( 3 )]
visible = false
modulate = Color( 0.976563, 0, 0, 1 )
position = Vector2( -10.0701, 1060 )

[node name="roof_brick" parent="." instance=ExtResource( 3 )]
visible = false
modulate = Color( 0.976563, 0, 0, 1 )
position = Vector2( -10.0701, -90 )

[node name="score_label" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 20.0
margin_top = 18.0
margin_right = 967.0
margin_bottom = 123.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Score: 0 "
autowrap = true
uppercase = true

[node name="arrow" parent="." instance=ExtResource( 7 )]
position = Vector2( 388.712, 438.812 )
rotation = -1.0472
scale = Vector2( 1.1, 1.1 )

[node name="audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="toggle_music" type="CheckBox" parent="."]
margin_left = 1747.0
margin_top = 8.0
margin_right = 1901.0
margin_bottom = 79.0
focus_mode = 1
custom_fonts/font = SubResource( 2 )
pressed = true
enabled_focus_mode = 1
text = "MUSIC"

[connection signal="toggled" from="toggle_music" to="." method="_on_toggle_music_toggled"]
